Fix safari visibility with the three-columns-icon on mobile device

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -196,6 +196,7 @@
     padding-bottom: 0;
     width: 0px;
     height: 0px;
+    visibility: hidden;
   }
 
   .three-columns-icon h1 {
